--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,60 @@ h1{
 h2 {
   margin-bottom: 0.5rem;
 }
+
+/* Utility Styles */
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
+  /* 16px based on the body tag, font-size*/
+}
+
+input {
+  padding: 0.5rem 1rem;
+}
+
+button{
+  font-size: 1rem;
+  cursor: pointer;
+  padding: 0.5rem 1.2rem;
+  background-color: #304F4F;
+  color: cyan;
+  border: 4px solid #dddddd;
+}
+
+button:hover{
+  background-color: black;
+  border: 4px solid crimson;
+}
+
+/* List styles */
+#mList {
+  border: 6px double crimson;
+}
+
+ol {
+  margin-left: 1.5rem;
+  border: 2px solid #333333;
+  margin-bottom: 1.5rem;
+}
+
+.list {
+  margin-top: 0.5rem;
+}
+
+.list .row {
+  padding: 5px 15px;
+  cursor: pointer;
+}
+
+.list .row:nth-child(odd){
+  background-color: #dddddd;
+}
+
+.list .row:hover {
+  background-color: yellow;
+}
