--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,25 @@ ol {
 .list .row:hover {
   background-color: yellow;
 }
+
+/* Tab styles */
+.tab{
+  margin-top: 1rem;
+  overflow: hidden;
+  border: 2px solid black;
+}
+
+.tab button{
+  float: left;
+  border: none;
+  outline: none;
+  padding: 1rem 1.2rem;
+  transition: 0.3s;
+  color: cyan;
+}
+
+.tab button.active{
+  background-color: yellow;
+  color: black;
+  font-weight: 700;
+}
