--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,30 @@ ol {
   color: black;
   font-weight: 700;
 }
+
+/* Tab content */
+.tabcontent{
+  display: none;
+  padding: 1rem 1.5rem;
+  border: 2px solid #333333;
+  border-top: none;
+}
+
+.tabcontent h2{
+  margin-top: 0;
+  text-align: center;
+}
+
+.tabcontent label{
+  display: inline-block;
+  width: 6%;
+}
+
+.tabcontent input{
+  display: inline-block;
+  width: 93%;
+}
+
+.tabcontent button{
+  width: 100%;
+}
