--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,17 @@ ol {
 .tabcontent button{
   width: 100%;
 }
+
+/* Footer styles */
+footer{
+  margin-top: 2rem;
+  border: 6px double crimson;
+  color: crimson;
+  padding: 2rem;
+  text-align: right;
+  font-size: 1.5rem;
+}
+
+footer p{
+  padding-right: 0.5rem;
+}
